WebKitTestRunner should check mainFrameURL exists in InjectedBundlePage::willSendRequestForFrame https://bugs.webkit.org/show_bug.cgi?id=231401

Patch by Gabriel Nava Marino <gnavamarino@apple.com> on 2021-10-12
Reviewed by Youenn Fablet.

* WebKitTestRunner/InjectedBundle/InjectedBundlePage.cpp:
(WTR::InjectedBundlePage::willSendRequestForFrame):
Add mainFrameURL check in case of loading a non localhost URL with WebKitTestRunner.

Canonical link: https://commits.webkit.org/242869@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@284039 268f45cc-cd09-0410-ab3c-d52691b4dbfc